==> styropyr0/oled.h/SSD1306.cpp <==
#include "SSD1306.h"

void OLED::begin()
{
    Wire.begin();
    Wire.setClock(200000);
    autoSetup();
    setPowerMode(BALANCED_MODE);
    clearBuffer();
}

void OLED::progressBar(uint8_t progress, uint8_t x, uint8_t y, int style)
{
    setPosition(x, y);
    progress /= 6.25;
    if (style > 15)
        style = 4;
    if (style < 11)
    {
        for (uint8_t i = 1; i <= 16; i++)
        {
            for (uint8_t j = 0; j < 5; j++)
            {
                if (i <= progress && i > 0)
                {
                    if (i == 1)
                        sendData(pgm_read_byte(&progressBarSet[style - 1][3][j]));
                    else if (i == 16)
                        sendData(pgm_read_byte(&progressBarSet[style - 1][4][j]));
                    else if (i == progress && style == 2)
                        sendData(pgm_read_byte(&progressBarSet[style - 1][4][j]));
                    else
                        sendData(pgm_read_byte(&progressBarSet[style - 1][5][j]));
                }
                else
                {
                    if (i == 1)
                        sendData(pgm_read_byte(&progressBarSet[style - 1][0][j]));
                    else if (i == 16)
                        sendData(pgm_read_byte(&progressBarSet[style - 1][1][j]));
                    else
                        sendData(pgm_read_byte(&progressBarSet[style - 1][2][j]));
                }
            }
        }
    }
    else if (style > 13)
    {
        if (progress > 12)
            progress = 12;
        for (uint8_t i = 0; i < 13; i++)
        {

            if (i == progress)
            {
                for (uint8_t j = 0; j < 20; j++)
                {
                    sendData(pgm_read_byte(&progressBarSet1[style - 14][j]));
                }
            }
            else
            {
                for (uint8_t j = 0; j < 5; j++)
                {
                    sendData(0x00);
                }
            }
        }
    }
    else
    {
        if (progress < 15)
        {
            uint8_t setVal = style - 10;
            if (style == 11)
                setVal = 0;
            for (uint8_t i = 0; i <= 16; i++)
            {
                for (uint8_t j = 0; j < 5; j++)
                {
                    if (i == progress && i < 15)
                        sendData(pgm_read_byte(&progressBarSet[10][setVal][j]));
                    else if (i == progress + 1 && i < 16 && style == 11)
                        sendData(pgm_read_byte(&progressBarSet[10][setVal + 1][j]));
                    else
                        sendData(0x00);
                }
            }
        }
    }
    delay(1);
}

void OLED::line(uint8_t startX, uint8_t startY, uint8_t endX, uint8_t endY, uint8_t thickness)
{
    startX = checkXBounds(startX);
    startY = checkYBounds(startY);
    endX = checkXBounds(endX);
    endY = checkYBounds(endY);

    int dx = abs(endX - startX);
    int dy = -abs(endY - startY);
    int sx = startX < endX ? 1 : -1;
    int sy = startY < endY ? 1 : -1;
    int err = dx + dy;

    for (int i = -thickness / 2; i <= thickness / 2; i++)
    {
        int startX_offset = startX + i * sy;
        int startY_offset = startY - i * sx;
        int endX_offset = endX + i * sy;
        int endY_offset = endY - i * sx;
        int err_offset = err;

        while (true)
        {
            drawPixel(startX_offset, startY_offset);
            if (startX_offset == endX_offset && startY_offset == endY_offset)
                break;
            int e2 = 2 * err_offset;
            if (e2 >= dy)
            {
                err_offset += dy;
                startX_offset += sx;
            }
            if (e2 <= dx)
            {
                err_offset += dx;
                startY_offset += sy;
            }
        }
    }
}
